# bag_perception_benchmark

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
bag_perception_benchmark/: autoware_workflow_runner_node.py  bag_player_node.py  benchmark_node.py  evaluation.py  figures.ipynb  pc_viz.py
bag_perception_benchmark/benchmark_tools/: __init__.py  box.py  eval_utils.py  iou.py  math_utils.py  ros_utils.py
bag_perception_benchmark/benchmark_tools/datasets/: __init__.py
bag_perception_benchmark/benchmark_tools/datasets/waymo_dataset/: __init__.py  waymo_dataset.py
launch/: benchmark_perception.launch.xml  benchmark_runner.launch.py  waymo_perception.launch.xml
perception_benchmark_tool/: .gitignore  benchmark_node.py  waymo_player_node.py
rviz/: bag_perception_benchmark.rviz
